--- a/app/views/static_pages/root.html
+++ b/app/views/static_pages/root.html
@@ -1,6 +1,6 @@
 
 
-<main id="root"><h1>test</h1></main>
+<main id="root"><h1>React is broken.</h1></main>
 
 <script type="text/javascript">
 </script>
