--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,45 @@
  *= require_self
  */
 
+ body {
+
+  font-family: 'Montserrat', sans-serif;
+ }
+
+ button {
+  font-family: 'Montserrat', sans-serif;
+  border-radius: 3px;
+  outline: none;
+ }
+
+ .login-form-container {
+  
+   display: flex;
+   justify-content: center;
+   
+ }
+
+ .login-form {
+   display: flex;
+   justify-content: center;
+   flex-direction: column;
+ }
+
+ .login-form-box { 
+   padding: 20px;
+   background: white;
+   position: relative;
+ }
+
+  .form-btn{
+    display: flex;
+   justify-content: center;
+   border-radius: 3px;
+    background-color: #B22222;
+    color: white;
+    font-family: 'Montserrat', sans-serif;
+    border: none;
+  }
 
  .modal-background {
   position: fixed;
@@ -27,9 +66,19 @@
 
 .modal-form {
   background-color: white;
-  /* font-family: 'Montserrat', sans-serif; */
+  font-family: 'Montserrat', sans-serif;
   position: absolute;
+  border-radius: 10px;
+  height: 620px;
+  width: 400px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+ .close-x {
+   position: absolute;
+   top: 5px;
+   right: 5px;
+   cursor: pointer;
+ }
