completed not logged navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 
 <script type="text/javascript">
   window.logo = '<%= image_url "logo.png" %>'
+  window.search_icon = '<%= image_url "search.png" %>'
 </script>
   </head>
 
