--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -50,18 +50,31 @@
   }
 
   .logo-nav{
-    margin-top: 25px;
+    margin-top: 13px;
     height: 30px;
     display: flex;
     align-items: center;
     justify-content: flex-end
 
   }
+ 
+  .not-logged-links{
+    margin-right: 35px;
+  }
+
+  .search-icon > img {
+    width: 22px;
+    height: 20px;
+
+  }
+  .search-icon{
+    padding-left: 15px;
+  }
 
   
   .logo-div{
     border-right: solid lightgray 1px;
-    transform: scale(.8);
+    transform: scale(.72);
     margin-right: auto;
     
   }
@@ -128,10 +141,10 @@
     cursor: pointer;
   }
   
-  .sign-up-btn {
+  .log-in-btn {
     height: 35px;
-    width: 75px;
-    font-size: 13px;
+    width: 70px;
+    font-size: 12px;
     color: black;
     background-color: white;
     border: solid lightgray 1px;
@@ -142,10 +155,10 @@
 
   }
   
-  .log-in-btn {
+  .sign-up-btn {
     height: 35px;
-    width: 75px;
-    font-size: 13px;
+    width: 70px;
+    font-size: 12px;
     color: white;
     background-color: #247F9E;
     border: solid blue 1px;
