--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -91,6 +91,7 @@
     font-size: 20px;
     color: black;
     margin: 10px;
+    cursor: pointer;
   }
 
   .fa-user-circle{
@@ -229,4 +230,23 @@
   border-radius: 2px;
   font-weight: 10;
  }
+
+ .user-logout{
+   color: #B22222;
+ }
+.user-dropdown{
+  display: none;
+}
+.user-dropdown > li {
+  list-style: none;
+}
+.user-dropdown > a {
+  text-decoration: none;
+}
+
+.user-dropdown-active{
+  display: block;
+  position: absolute;
+  background-color: white;
+}
 
