changed more form inputs

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,11 +15,11 @@
  */
  body {
    
-   font-family: 'Commissioner', sans-serif;
+   font-family: 'Amiko', sans-serif;
   }
   
   button {
-    font-family: 'Commissioner', sans-serif;
+    font-family: 'Amiko', sans-serif;
     border-radius: 3px;
     border: none;
     font-size: 14px;
