--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -96,7 +96,6 @@
   border-bottom: solid lightgray 1px;
   padding-top: 10px;
   font-size: 10px;
-  padding-left: 10px;
   padding-bottom: 10px;
   text-align: center;
   line-height: 1.5;
@@ -131,7 +130,7 @@
 }
 .user-header h2{
   font-size: 37px;
-  font-weight: bold;
+  font-weight: 600;
   padding-top: 15px;
   cursor: pointer;
 }
