--- a/app/assets/stylesheets/api/landing.scss
+++ b/app/assets/stylesheets/api/landing.scss
@@ -1,10 +1,150 @@
-.splash-div{
-    position: flex;
+// .splash-div{
+//   position: relative;
+//   display:flex;
+//   background-image: url(../../images/food_wine.jpg);
+// }
+
+.background-img{
+  background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), image_url('food_wine.jpg');
+ 
+  background-size: cover;
+  height: 470px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
 }
 
-.splash-image{
+.search-header{
+  color: white;
+  margin-left: 25px;
+  margin-right: 25px;
+  text-align: center;
+  
+}
+.search-header h1{
+  font-size: 42px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+
+.restaurant-display{
+background-color: white;
+ padding: 0px 30px;
+}
+
+.display-location{
+  display: flex;
+  padding-top: 17px;
+  padding-bottom: 17px;
+  border-bottom: solid lightgray 1px;
+  width: 100%;
+}
+
+.display-location p{ 
+  font-size: 13px;
+}
+
+.splash-header{
   position: absolute;
-    height: 430px;
-    width: 100%;
+z-index: 2;
+  color:white;
+}
+
+.splash-search-input{
+  background-color:white;
+  height: 40px;
+  border:none;
+  border-right: solid lightgray 1px;
+  font-size: 15px;
+  font-family: 'Amiko', sans-serif;
+  padding-right: 15px;
+  padding-left: 5px;
+  margin-top: 3px;
+  
+}
+.splash-search-select{
+  background-color:white;
+  height: 40px;
+  border: none;
+  font-size: 15px;
+  padding-left: 5px;
+  padding-right: 13px;
+  font-family: 'Amiko', sans-serif;
+  padding-top: 5px;
+  margin-top: 3px;
+}
+
+#splash-search-form{
+  background-color: white;
+  width: 550px;
+  height: 48px;
+  display:flex;
+  justify-content: space-around;
+  border-radius: 3px;
 
 }
+
+
+#splash-search-div{
+  display:flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 15px;
+  width: 560px;
+
+}
+.search-form-btn{
+    border-radius: 3px;
+    background-color: #B22222;
+    color: white;
+    font-family: 'Amiko', sans-serif;
+    font-size: 14px;
+    cursor: pointer;
+    outline: none;
+    height: 48px;
+    width: 125px;
+
+}
+
+.splash-search-bar{
+  background-color: white;
+    height: 48px;
+    width:400px;
+    font-size: 15px;
+    border-radius: 3px;
+    margin-right: 12px;
+}
+.splash-search-bar input{
+  font-family: 'Amiko', sans-serif;
+    height: 38px;
+    width: 300px;
+    font-size: 15px;
+    border-radius: 3px;
+    border: none;
+    margin-left: 10px;
+
+}
+.splash-search-bar input:focus{
+  outline: none;
+}
+.splash-search-bar input::placeholder{
+  color: rgb(138, 136, 136);
+  font-weight: 520;
+  font-size: 15px;
+}
+
+.splash-search-bar img{
+  width: 19px;
+  height: 19px;
+  padding-left: 10px;
+  margin-top: 13px;
+}
+
+.search-form-btn:hover {
+    background-color:  #8d1b1b;
+    transition: 0.4s;
+  }
