attempting to fix aws issues in seed files

--- a/app/assets/stylesheets/api/restaurants.scss
+++ b/app/assets/stylesheets/api/restaurants.scss
@@ -47,12 +47,16 @@
     
 }
 
+.res-icon-cont{
+  display: flex;
+  
 
 #res-link{
     text-decoration: none;
     color:black;
     cursor: pointer;
-
+  padding: 0 15px;
+}
 }
 
 
