--- a/app/assets/stylesheets/api/search_page.scss
+++ b/app/assets/stylesheets/api/search_page.scss
@@ -174,7 +174,7 @@ display:flex;
 .dols{
   display: flex;
   align-items: center;
-  width: 300px;
+  width: 100%;
   margin-top: 10px;
 
 }
@@ -214,9 +214,9 @@ display:flex;
   text-overflow: ellipsis;
   
 }
-#nei{
+// #nei{
 
-}
+// }
 
 .g-dol2{
   color: lightgray;
