polishing reservation form

--- a/app/assets/stylesheets/api/reservations.scss
+++ b/app/assets/stylesheets/api/reservations.scss
@@ -1,3 +1,198 @@
 // Place all the styles related to the api::reservations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.reserve-div-c{
+background-color: white;
+display: flex;
+height: 100%;
+justify-content: center;
+}
+
+.reserve-div-l{
+
+   width: 600px;
+   margin-right: 20px;
+}
+
+.reserve-div-r{
+
+    width: 300px;
+    margin-top: 50px;
+}
+
+.reserve-div-r h2{
+    font-weight: bold;
+    font-size:15px;
+    margin-bottom: 20px;
+}
+
+.rdiv-inf{
+    line-height: 1.7;
+}
+.rdiv-inf p{
+    font-size: 12px;
+    margin-bottom: 15px;
+    font-weight: none;
+}
+.rdiv-inf p:first-of-type{
+    font-size: 13px;
+    font-weight: bold;
+    margin-bottom: 0px;
+}
+
+.rdiv-l{
+    margin-top: 35px;
+    font-weight:bold;
+}
+
+.rdiv-img{
+  display: flex;
+  margin-top: 15px;
+  align-items: center;
+}
+.rdiv-a img{
+    height: 70px;
+    width: 70px;
+    object-fit: cover;
+    border-radius: 4px;
+}
+
+.rdiv-b{
+margin-left: 18px;
+
+}
+
+.rdiv-b h2{
+font-weight: bold;
+font-size: 20px;
+padding-bottom: 20px;
+
+}
+
+.rdiv-dets{
+    display:flex;
+    justify-content: space-between;
+}
+.dd{
+    margin-top: 15px;
+    margin-bottom: 20px;
+    font-size: 15px;
+}
+
+.det-cu{
+    display:flex;
+    margin-bottom: 5px;
+     font-size: 15px;
+}
+
+.det-si{
+color: red;
+font-weight: bold;
+cursor: pointer;
+}
+.det-si2{
+color: red;
+font-weight: bold;
+
+}
+
+.dd-input{
+    display:flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    margin-top: 10px;
+}
+
+.dd-input input{
+    width: 260px;
+    font-family: 'Amiko', sans-serif;
+    height: 42px;
+    border: solid lightgray 1px;
+    border-radius: 3px;
+    padding-left: 10px;
+    color: gray
+
+}
+.dd-input input:first-of-type:hover{
+    border: solid black 1px;
+}
+
+.dd-select{
+    display:flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 15px;
+}
+
+.dd-select input{
+    width: 260px;
+    font-family: 'Amiko', sans-serif;
+    height: 42px;
+    border: solid lightgray 1px;
+    border-radius: 3px;
+    padding-left: 10px;
+    color: gray
+}
+.dd-select select{
+    width: 259px;
+    font-family: 'Amiko', sans-serif;
+    height: 44px;
+    border: none;
+    padding-left: 10px;
+    color: black
+}
+
+.dd-select input:hover{
+    border: solid black 1px;
+
+}
+.dd-select div:hover{
+    border: solid black 1px;
+
+}
+.dd-sel-cont{
+width: 272px;
+ border: solid lightgray 1px;
+   border-radius: 3px;
+height: 44px;
+}
+
+.comp-btn{
+    background-color:#B22222;
+    color: white;
+    width: 100%;
+    height: 45px;
+    border-radius: 3px;
+    font-family: 'Amiko', sans-serif;
+    cursor:pointer;
+    margin-top: 20px;
+    margin-bottom: 17px;
+
+}
+.comp-btn:hover {
+    background-color:  #8d1b1b;
+    transition: 0.4s;
+  }
+
+.t-o-s{
+    display:flex;
+    flex-wrap: wrap;
+    font-size: 13px;
+    line-height: 1.4;
+    
+}
+
+
+.chk-bx{
+    font-size: 14px;
+}
+
+.chk-bx input{
+margin-bottom: 10px;;
+}
+
+input[type="checkbox"]:checked {
+  
+}
